Header Default overflow-x problem is FIXED.

--- a/src/layouts/header/default/styles.less
+++ b/src/layouts/header/default/styles.less
@@ -3,6 +3,7 @@
   padding: 0 !important;
   background: #FFFFFF;
   line-height: 0!important;
+  overflow-x: hidden!important;
   .logo {
     margin-left: 32px;
     img {
